solved few back tracking problems